[package]
name = "bystr"
version = "0.1.2"
description = "macro to create compile-time, fixed length, byte array from a string"
authors = ["Zach Marcantel <zmarcantel@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/zmarcantel/bystr-rs"
readme = "README.md"
keywords = ["ffi", "bpf", "cstring", "cstr"]

[workspace]
members = ["./bystr-impl", "./tests"]

[dependencies]
proc-macro-hack = "^0.5.11"
bystr-impl = { version = "0.1.2", path = "./bystr-impl" }
