[package]
name = "bystr-impl"
version = "0.1.0"
description = "implementation of the bystr macro"
authors = ["Zach Marcantel <zmarcantel@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/zmarcantel/bystr-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.8", features = ["full"] }
quote = "^1.0.2"
proc-macro-hack = "^0.5.11"
